# autonomous-quadrotor-guide

./: .codacy.yml  .gitignore  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithms.md  control.md  dynamics.md  planning.md  swarm.md
simulations/: __init__.py  consensus_formation_demo.py  coverage_demo.py  geometric_control_demo.py  hover_pid.py  leader_follower_demo.py  min_snap_demo.py  path_planning_3d.py  swarm_flocking.py  waypoint_tracking.py
simulations/astar_3d/: run.py
simulations/complementary_filter/: run.py
simulations/consensus_formation/: run.py
simulations/ekf/: run.py
simulations/feedback_linearisation/: run.py
simulations/geometric_control/: run.py
simulations/leader_follower/: run.py
simulations/lqr_hover/: run.py
simulations/min_snap/: run.py
simulations/mppi/: run.py
simulations/particle_filter/: run.py
simulations/pid_hover/: run.py
simulations/polynomial_trajectory/: run.py
simulations/potential_field_3d/: run.py
simulations/potential_swarm/: run.py
simulations/reynolds_flocking/: run.py
simulations/rrt_star_3d/: run.py
simulations/ukf/: run.py
simulations/virtual_structure/: run.py
simulations/voronoi_coverage/: run.py
src/quadrotor_sim/: __init__.py
tests/: test_control_stack.py  test_coverage_planner.py  test_data_panel.py  test_estimation.py  test_geometric.py  test_lqr.py  test_min_snap.py  test_mixer.py  test_motor.py  test_package.py  test_pid.py  test_planning.py  test_presets.py  test_quadrotor_model.py  test_state_machine.py  test_tracking.py
(+132 files in other folders)
